<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="repeat">Repeate password</string>
    <string name="password">Password</string>
    <string name="or_separator">───────── OR ─────────</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="register_">Register</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="pratos">Pratos principais</string>
    <string name="prato_desc">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
</resources>