<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="53dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            android:id="@+id/textView4" android:layout_marginEnd="24dp" android:layout_marginStart="24dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:text="dh@digitalhouse.com"
            android:id="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView5" android:layout_marginEnd="24dp"/>
    <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword" android:layout_marginEnd="24dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword" android:text="******************"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toTopOf="@+id/button_login"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button_login"
            android:backgroundTint="@color/colorAccent" android:textColor="@android:color/white"
            android:height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/textView6"
            android:layout_marginTop="32dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textAlignment="center"
            android:text="@string/or_separator"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/button_login" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toTopOf="@+id/button_register"/>
    <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button_register"
            android:backgroundTint="@color/secundary" android:textColor="@android:color/white"
            android:height="60dp" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>